--- a/client/components/navbar/navbar.scss
+++ b/client/components/navbar/navbar.scss
@@ -2,59 +2,57 @@
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-}
+};
 .navbar {
     display: flex;
     background-color: gray;
-    min-height: 7vh;
+    height: 54px;
     justify-content: space-around;
-    
-}
+};
 .nav-list {
   display: flex;
   width: 80%;
   justify-content: space-around;
-  margin: auto;
-}
+};
 .nav-list li {
-  width: 100%;
+  display: flex;
   list-style: none;
   position: relative;
   flex-direction: column;
-  padding: 17px 16px;
+  
 }
 .nav-list a {
     color: yellow;
-    text-align: center;
-    
+    //text-align: center;
     text-decoration: none;
     font-size: 17px;
-}
+    padding: 17px 16px;
+};
 .nav-list a:hover {
     background-color: yellowgreen;
-}
+};
 .submenu-d {
   display: none;
-}
+};
 .submenu {
+    margin-top: 0;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    //position: absolute;
-    background-color: grey;
+    background-color: red;
     font-size: 17px;
    
     
-  }
+  };
   .submenu li {
-    padding: 17px 16px;
+    margin-top: 0;
     color: yellow;
     text-align: center;
-    padding: 17px 16px;
     text-decoration: none;
-    
-  }
+  };
 
+  .submenu a {
+    padding: 17px 16px;
+  };
   
 
 
