--- a/client/components/content/content.scss
+++ b/client/components/content/content.scss
@@ -1,25 +1,27 @@
 .content {
-    width: 70%;
+    width: 80%;
     float: left;
     background-color: burlywood;
-    display: flex;
-    flex-direction: flex-start;
     margin-top: 0;
-    justify-content: center;
-
-};
-.posts {
-    margin-top: 25px;
-    margin-bottom: 25px;
-    .post {
+    &__posts {
+        margin-top: 25px;
+        margin-bottom: 25px;
         text-align: center;
-        width: 80%;
-        margin: auto;
+    }
+    &__post {
+        display: inline-block;
+        text-align: center;
+        width: 30%;
+        min-width: 220px;
+        height: 300px;
+        margin: 10px;
         padding: 10px 10px;
         border-style: solid;
         margin-bottom: 25px;
-    
-        //border: 2px;
+        overflow: hidden;
     }
+};
+
+   
     
-}
+
