--- a/client/components/header/_header.scss
+++ b/client/components/header/_header.scss
@@ -1,8 +1,33 @@
 .header {
-    background: url('tlostrona.jpg') no-repeat;
-    background-size: 100% 100%;
-    display: block;
-    height: 30%;
-    width: 100%;
-    position: relative;
+  background-color: #f2f2f2;
+  display: flex;
+  height: 30%;
+  width: 100%;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  &__logo {
+    max-width: 100%;
+    height: 80%;
+  }
+  &__fulltitle {
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 100px;
+    float: right;
+  }
+  &__title {
+    font-family: "Museo700";
+    font-size: 40px;
+  }
+}
+@media (max-width: 745px) {
+  .header {
+    &__title {
+      font-size: 30px;
+    }
+    &__subtitle {
+      display: none;
+    }
+  }
 }
