--- a/client/components/navbar/_navbar.scss
+++ b/client/components/navbar/_navbar.scss
@@ -1,33 +1,32 @@
-*{
+* {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-};
+}
 .navbar {
-    display: flex;
-    background-color: gray;
-    height: 50px;
-    justify-content: space-between;
-    position: relative;
-    
+  display: flex;
+  background-color: #d9d9d9;
+  height: 50px;
+  justify-content: space-between;
+  position: relative;
 }
 .nav__submenu {
-    margin-top: 50px;
-    display: none;
-    position: absolute;
-    background-color: red;
-   min-width: 200px;
-   z-index: 1;
-   
+  margin-top: 50px;
+  display: none;
+  position: absolute;
+  background-color: #d9d9d9;
+  min-width: 200px;
+  z-index: 1;
 }
 
-.nav__item:hover .nav__submenu {display: block;}
+.nav__item:hover .nav__submenu {
+  display: block;
+}
 
 .nav__list {
   display: flex;
-  width:100%;
-  margin:auto;
-  
+  width: 60%;
+  margin: auto;
 }
 .nav__item {
   display: flex;
@@ -35,36 +34,35 @@
   position: relative;
   flex-direction: column;
   text-align: center;
-  margin-left:auto;
-  margin-right:auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 .nav__link {
-    color: yellow;
-    text-decoration: none;
-    font-size: 14px;
-    padding: 17px;
-    display: block;
-    
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 14px;
+  padding: 17px;
+  display: block;
 }
 .nav__link:hover {
-  background-color: yellowgreen;
+  background-color: #78a22f;
 }
 
 .nav__toggler {
   padding: 12px;
 }
-  .nav__toggler div {
-    width: 25px;
-    height: 3px;
-    margin: 5px;
-    background-color: white;
-    display: none;
-    flex-direction: column;
-    justify-content: space-around;
+.nav__toggler div {
+  width: 25px;
+  height: 3px;
+  margin: 5px;
+  background-color: white;
+  display: none;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 @media (max-width: 745px) {
-
   .navbar {
     justify-content: flex-end;
   }
@@ -87,34 +85,17 @@
     width: 100%;
     margin-top: 50px;
   }
- /* .nav__list {
-    display: none;
-    &--active{
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      background-color: gray;
-      width: 100%;
-      margin-top: 50px;
-    }
-  } */
   .nav__link {
+    width: 100%;
+  }
+  .nav__item {
     width: 100%;
   }
   .nav__submenu {
     display: block;
-    width:100%;
+    width: 100%;
     position: relative;
-    background-color: red;
     z-index: 1;
     margin-top: 0;
   }
-/*  .nav__submenu--active{
-    width:100%;
-    position: relative;
-    background-color: red;
-    z-index: 1;
-    margin-top: 0;
-  } */
- // .nav__item:hover .nav__submenu {display: none;}
 }
