--- a/client/styles.scss
+++ b/client/styles.scss
@@ -1,25 +1,28 @@
+@import "styles/variables";
+@import "styles/content";
 @import "components/header/header";
 @import "components/navbar/navbar";
-@import "components/content/content";
+@import "components/main/main";
 @import "components/links/links";
-@import "components/kontakt/kontakt";
+@import "components/footer/footer";
 
-@font-face
-{
-font-family: 'Museo300';
-src:url('./fonts/Museo-Regular-300.otf');
+@font-face {
+  font-family: "Museo300";
+  src: url("./fonts/Museo-Regular-300.otf");
 }
-@font-face
-{
-font-family: 'Museo500';
-src:url('./fonts/Museo-Regular-500.otf');
+@font-face {
+  font-family: "Museo500";
+  src: url("./fonts/Museo-Regular-500.otf");
 }
-
-html, body {
-    width:100%;
-    margin: 0px; 
-    font-family: 'Museo300';
+@font-face {
+  font-family: "Museo700";
+  src: url("./fonts/Museo-Regular-700.otf");
 }
 
-
-
+html,
+body {
+  width: 100%;
+  margin: 0px;
+  font-family: "Museo300";
+  //background-color: #f2f2f2;
+}
