--- a/client/components/main/_main.scss
+++ b/client/components/main/_main.scss
@@ -29,11 +29,14 @@
   }
   &__image {
     width: 100%;
+    min-height: 100%;
     height: auto;
   }
   
   &__header {
     margin-top: 20px;
+    margin-left: 3%;
+    margin-right: 3%;
   }
   &__more {
     text-align: center;
