--- a/client/styles.scss
+++ b/client/styles.scss
@@ -1,5 +1,6 @@
 @import "styles/variables";
 @import "styles/content";
+@import "styles/subnav";
 @import "components/header/header";
 @import "components/navbar/navbar";
 @import "components/main/main";
