--- a/client/components/main/_main.scss
+++ b/client/components/main/_main.scss
@@ -18,10 +18,16 @@
     margin: 10px;
     margin-bottom: 25px;
     overflow: hidden;
+
+    &:hover {
+      cursor: pointer;
+      box-shadow: 0 4px 8px 0 gray, 0 6px 20px 0 gray;
+    }
+    a:visited {
+      color: black;
+    }
   }
-  &__post:hover {
-    cursor: pointer;
-  }
+
   &__image-container {
     width: 100%;
     height: 75%;
