--- a/client/styles/_content.scss
+++ b/client/styles/_content.scss
@@ -15,24 +15,40 @@
   text-align: left;
   font-size: $font-content;
   min-height: 80%;
+
   &__header {
     margin: $margin-small;
     text-align: center;
   }
+
   &__image {
     text-align: center;
     margin-top: $margin-medium;
     margin-bottom: $margin-medium;
+    img {
+      max-width: 80%;
+      height: auto;
+    }
   }
+
   &__article {
     display: block;
     margin: $margin-large;
+    line-height: 1.4;
     a {
       color: #78a22f;
     }
     h2 {
       margin-top: $margin-small;
       margin-bottom: $margin-small;
+    }
+  }
+  &__back {
+    margin: $margin-very-large;
+    text-align: center;
+    font-weight: bold;
+    a {
+      color: #78a22f;
     }
   }
   &__facebook {
