--- a/client/styles.scss
+++ b/client/styles.scss
@@ -1,6 +1,7 @@
 @import "styles/variables";
 @import "styles/content";
 @import "styles/subnav";
+@import "styles/modal";
 @import "components/header/header";
 @import "components/navbar/navbar";
 @import "components/main/main";
