--- a/client/styles/_modal.scss
+++ b/client/styles/_modal.scss
@@ -1,5 +1,5 @@
 .modal {
-  display: block; /* Hidden by default */
+  display: flex; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 999; /* Sit on top */
   left: 0;
@@ -11,13 +11,18 @@
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 
   &__content {
+    display: flex;
     margin: auto;
-    display: block;
-    width: 100%;
-    height: 100%;
+    max-width: 95%;
+    max-height: 95%;
+    height: auto;
+    position: relative;
+    justify-content: center;
+    align-items: center;
   }
 
   &__close {
+    justify-content: flex-end;
     color: #aaa;
     float: right;
     font-size: 28px;
