--- a/client/styles/_subnav.scss
+++ b/client/styles/_subnav.scss
@@ -14,7 +14,7 @@
   }
   &__link {
     font-size: 30px;
-    color: #78a22f;
+    color: $green-scout;
   }
   &__content {
     margin-top: $margin-very-large;
