--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -8,3 +8,6 @@ $font-content: 18px;
 $green-scout: #78a22f;
 $gray-dark: #d9d9d9;
 $gray-bright: #f2f2f2;
+
+$responsivennes-mobile: 751px;
+$responsivennes-smaller: 1180px;
