--- a/client/components/navbar/_navbar.scss
+++ b/client/components/navbar/_navbar.scss
@@ -1,11 +1,11 @@
 * {
-  padding: 0px;
-  margin: 0px;
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 .nav {
   display: flex;
-  background-color: #d9d9d9;
+  background-color: $gray-dark;
   height: 50px;
   justify-content: space-between;
   position: relative;
@@ -14,7 +14,7 @@
     margin-top: 50px;
     display: none;
     position: absolute;
-    background-color: #d9d9d9;
+    background-color: $gray-dark;
     min-width: 200px;
     z-index: 1;
   }
@@ -63,7 +63,15 @@
   }
 }
 
-@media (max-width: 745px) {
+@media (max-width: $responsivennes-smaller) {
+  .nav {
+    &__list {
+      width: 95%;
+    }
+  }
+}
+
+@media (max-width: $responsivennes-mobile) {
   .nav {
     justify-content: flex-end;
 
