--- a/client/styles/_modal.scss
+++ b/client/styles/_modal.scss
@@ -1,14 +1,14 @@
 .modal {
-  display: flex; 
-  position: fixed; 
-  z-index: 999; 
+  display: flex;
+  position: fixed;
+  z-index: 999;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 
   &__content {
     display: flex;
