--- a/client/components/header/_header.scss
+++ b/client/components/header/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: #f2f2f2;
+  background-color: $gray-bright;
   display: flex;
   height: 30%;
   width: 100%;
@@ -26,7 +26,7 @@
     margin-left: 5%;
     margin-right: 5%;
     &__title {
-      font-size: 30px;
+      font-size: $size-large;
     }
     &__subtitle {
       display: none;
