--- a/client/components/main/_main.scss
+++ b/client/components/main/_main.scss
@@ -5,7 +5,7 @@
   min-height: 100%;
   margin-top: 0;
   &__posts {
-    margin-top: 25px;
+    margin-top: $size-medium-large;
     text-align: center;
   }
   &__post {
@@ -15,8 +15,8 @@
     width: 30%;
     min-width: 220px;
     height: 350px;
-    margin: $margin-small;
-    margin-bottom: 25px;
+    margin: $size-small;
+    margin-bottom: $size-medium-large;
     overflow: hidden;
 
     &:hover {
@@ -42,7 +42,7 @@
     text-decoration: none;
   }
   &__header {
-    margin-top: $margin-medium;
+    margin-top: $size-medium;
     margin-left: 3%;
     margin-right: 3%;
     color: black;
@@ -50,8 +50,8 @@
   &__more {
     width: 200px;
     margin: auto;
-    font-size: 20px;
-    margin-bottom: $margin-medium;
+    font-size: $size-medium;
+    margin-bottom: $size-medium;
     &:hover {
       cursor: pointer;
     }
