--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -1,7 +1,8 @@
-$margin-very-large: 50px;
-$margin-large: 30px;
-$margin-medium: 20px;
-$margin-small: 10px;
+$size-very-large: 50px;
+$size-large: 30px;
+$size-medium-large: 25px;
+$size-medium: 20px;
+$size-small: 10px;
 
 $font-content: 18px;
 
